# MealMuse

./: .gitignore
backend/: .env  .gitignore  crew_interface.py  main.py  requirements.txt
backend/firebase/: firebase_utils.py
backend/models/: ingredient.py  meal.py  preference.py
backend/routes/: inventory.py  meals.py  preferences.py
backend/utils/: file_utils.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  firebase.d.ts  firebase.ts
frontend/src/components/fridge/: FridgeUploader.tsx  ManualIngredientInput.tsx
frontend/src/components/grocery/: GroceryList.tsx
frontend/src/components/home/: CTASection.tsx  FeaturesSection.tsx  HeroSection.tsx  TestimonialsSection.tsx
frontend/src/components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/planner/: MealPlanModal.tsx  MealPlannerDay.tsx
frontend/src/components/recipes/: RecipeCard.tsx  RecipeDetail.tsx
frontend/src/components/ui/: Badge.tsx  (+6 more)
frontend/src/context/: AuthContext.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: animations.ts  db.ts  mockData.ts
frontend/src/pages/: DashboardPage.tsx  FridgePage.tsx  GroceryPage.tsx  LandingPage.tsx  MealsPage.tsx  OnboardingPage.tsx  PlannerPage.tsx  SettingsPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
mealmuse_crew/: README.md  pyproject.toml
mealmuse_crew/knowledge/: user_preference.txt
mealmuse_crew/src/mealmuse_crew/: crew.py  main.py
mealmuse_crew/src/mealmuse_crew/config/: agents.yaml  tasks.yaml
(+2 files in other folders)
