[project]
name = "mealmuse_crew"
version = "0.1.0"
description = "mealmuse-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
mealmuse_crew = "mealmuse_crew.main:run"
run_crew = "mealmuse_crew.main:run"
train = "mealmuse_crew.main:train"
replay = "mealmuse_crew.main:replay"
test = "mealmuse_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
